--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -20,15 +20,29 @@ DOI={10.1016/0019-1035(87)90048-0},
 number={3},
 journal={Icarus},
 publisher={Elsevier BV},
-author={Millis, R.L. and Wasserman, L.H. and Franz, O.G. and Nye, R.A. and Oliver, R.C. and Kreidl, T.J. and Jones, S.E. and Hubbard, W. and Lebofsky, L. and Goff, R. and et al.},
+author={Millis, R.L. and Wasserman, L.H. and Franz, O.G. and others},
 year={1987},
 month={Dec},
 pages={507–518}
 }
 
+@Article{Smith1989,
+title={Voyager 2 at Neptune: Imaging Science Results},
+volume={246},
+url={http://dx.doi.org/10.1126/science.246.4936.1422},
+DOI={10.1126/science.246.4936.1422},
+number={4936},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Smith, B. A. and Soderblom, L. A. and Banfield, D. and others},
+year={1989},
+month={Dec},
+pages={1422–1449}
+}
+
 @Misc{Giorgini1996,
 title = {JPL's On-Line Solar System Data Service},
-author = {Giorgini, J.D. and Yeomans, D.K. and Chamberlin, A.B. and Chodas, P.W. and Jacobson, R.A. and Keesey, M.S. and Lieske, J.H. and Ostro, S.J. and Standish, E.M. and Wimberly, R.N.},
+author = {Giorgini, J.D. and Yeomans, D.K. and Chamberlin, A.B. and others},
 howpublished = {BULLETIN OF THE AMERICAN ASTRONOMICAL SOCIETY (BAAS)},
 year = {1996},
 volume = {28},
@@ -36,6 +50,19 @@ number = {13},
 pages = {1158}
 }
 
+@Article{Rettig2001,
+title={Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey},
+volume={154},
+url={http://dx.doi.org/10.1006/icar.2001.6715},
+DOI={10.1006/icar.2001.6715},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Rettig, T},
+year={2001},
+month={Dec},
+pages={313–320}
+}
 
 @Article{Tsiganis2005, 
 title={\href{http://dx.doi.org/10.1038/nature03539}{Origin of the orbital architecture of the giant planets of the Solar System}},
@@ -49,6 +76,20 @@ author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
 year={2005},
 month={May},
 pages={459–461}
+}
+
+@article{Porco2003,
+title={Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings},
+volume={299},
+url={http://dx.doi.org/10.1126/science.1079462},
+DOI={10.1126/science.1079462},
+number={5612},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)}, 
+year={2003},
+month={Mar},
+pages={1541–1547},
+author = {Porco, Carolyn C and West, Robert A and McEwen, Alfred and others},
 }
 
 @Article{Gomes2005,
@@ -73,7 +114,7 @@ DOI={10.1038/nature03938},
 number={7056},
 journal={Nature},
 publisher={Nature Publishing Group},
-author={Thomas, P. C. and Parker, J. Wm. and McFadden, L. A. and Russell, C. T. and Stern, S. A. and Sykes, M. V. and Young, E. F.},
+author={Thomas, P. C. and Parker, J. Wm. and McFadden, L. A. and others},
 year={2005},
 month={Sep},
 pages={224–226}
@@ -87,7 +128,7 @@ DOI={10.1051/0004-6361:20078166},
 number={1},
 journal={Astronomy and Astrophysics},
 publisher={EDP Sciences},
-author={Carry, B. and Dumas, C. and Fulchignoni, M. and Merline, W. J. and Berthier, J. and Hestroffer, D. and Fusco, T. and Tamblyn, P.},
+author={Carry, B. and Dumas, C. and Fulchignoni, M. and others},
 year={2008},
 month={Jan},
 pages={235–244}
@@ -101,10 +142,24 @@ DOI={10.1016/j.icarus.2008.09.011},
 number={2},
 journal={Icarus},
 publisher={Elsevier BV},
-author={Widemann, T. and Sicardy, B. and Dusser, R. and Martinez, C. and Beisker, W. and Bredner, E. and Dunham, D. and Maley, P. and Lellouch, E. and Arlot, J.-E. and et al.},
+author={Widemann, T. and Sicardy, B. and Dusser, R. and others},
 year={2009},
 month={Feb},
 pages={458–476}
+}
+
+@Article{Thomas2010,
+title={Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission},
+volume={208},
+url={http://dx.doi.org/10.1016/j.icarus.2010.01.025},
+DOI={10.1016/j.icarus.2010.01.025},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Thomas, P.C.},
+year={2010},
+month={Jul},
+pages={395–401}
 }
 
 @Article{Sicardy2011,
@@ -115,7 +170,7 @@ DOI={10.1038/nature10550},
 number={7370},
 journal={Nature},
 publisher={Nature Publishing Group},
-author={Sicardy, B. and Ortiz, J. L. and Assafin, M. and Jehin, E. and Maury, A. and Lellouch, E. and Hutton, R. Gil and Braga-Ribas, F. and Colas, F. and Hestroffer, D. and et al.},
+author={Sicardy, B. and Ortiz, J. L. and Assafin, M. and others},
 year={2011},
 month={Oct},
 pages={493–496}
@@ -136,7 +191,7 @@ DOI={10.1088/0004-6256/144/5/132},
 number={5},
 journal={The Astronomical Journal},
 publisher={IOP Publishing},
-author={Jacobson, R. and Brozović, M. and Gladman, B. and Alexandersen, M. and Nicholson, P. D. and Veillet, C.},
+author={Jacobson, R. and Brozović, M. and Gladman, B. and others},
 year={2012},
 month={Oct},
 pages={132}
@@ -159,7 +214,7 @@ DOI={10.1088/0004-6256/145/2/44},
 number={2},
 journal={The Astronomical Journal},
 publisher={IOP Publishing},
-author={Zacharias, N. and Finch, C. T. and Girard, T. M. and Henden, A. and Bartlett, J. L. and Monet, D. G. and Zacharias, M. I.},
+author={Zacharias, N. and Finch, C. T. and Girard, T. M. and others},
 year={2013},
 month={Jan},
 pages={44}
@@ -173,7 +228,7 @@ DOI={10.1088/0004-637x/773/1/26},
 number={1},
 journal={ApJ},
 publisher={IOP Publishing},
-author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Lellouch, E. and Tancredi, G. and Lecacheux, J. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Behrend, R. and et al.},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and others},
 year={2013},
 month={Jul},
 pages={26}
@@ -186,7 +241,7 @@ url={http://dx.doi.org/10.1016/j.icarus.2014.03.038},
 DOI={10.1016/j.icarus.2014.03.038},
 journal={Icarus},
 publisher={Elsevier BV},
-author={Drummond, J.D. and Carry, B. and Merline, W.J. and Dumas, C. and Hammel, H. and Erard, S. and Conrad, A. and Tamblyn, P. and Chapman, C.R.},
+author={Drummond, J.D. and Carry, B. and Merline, W.J. and others},
 year={2014},
 month={Jul},
 pages={28–37}
@@ -200,7 +255,7 @@ url = {http://sbn.psi.edu/pds/resource/occ.html},
 }
 
 @Article{GomesJunior2015-Ceres,
-author = {Gomes-Júnior, A. R. and others},
+author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others},
 title = {\href{http://arxiv.org/abs/1504.04902}{Results of two multi-chord stellar occultations by dwarf planet (1) Ceres}},
 url = {http://arxiv.org/abs/1504.04902},
 journal = {Monthly Notices},
@@ -209,175 +264,12 @@ year = {2015},
 }
 
 @Article{GomesJunior2015-Irregular,
-author = {Gomes-Júnior, A. R. and others},
-title = {Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
-journal = {A\&A},
-note = {aceito},
-year = {2015},
-}
-
-
-
-
-
-
-@article{Stone1989,
-author = {Stone, Ronald C.},
-journal = {The Astronomical Journal},
-number = {4},
-pages = {1227--1237},
-title = {A Comparison of Digital Centering Algorithms},
-volume = {97},
-year = {1989},
-address= {U. S. Naval Observatory, Washington}
-}
-
-@article{Assafin1997,
-author = {Assafin, M. and Vieira Martins, R. and Andrei, A. H.},
-title = {A Method to Improve Guide Star Catalogue Positions with Astrometric Catalogues},
-journal = {The Astronomical Journal},
-pages = {1451},
-volume = {113},
-year = {1997}
-}
-
-@article{Tody1993,
-author = {Tody, D.},
-journal = {ASP Conf. Ser.},
-pages = {173},
-title = {IRAF in the Nineties, in Astronomical Data Analysis Software and Systems II},
-volume = {52},
-year = {1993}
-}
-
-@Book{Bevington1969,
-author = {Bevington, P. R.},
-title = {Data Reduction and Error Analysis for the Physical Sciences},
-year = {1969},
-publisher = {McGraw-Hill Science},
-address = {New York}
-}
-
-@article{UCAC2,
-author = {Zacharias, N. and others},
-journal = {Astronomical Journal},
-title = {The second US Naval Observatory CCD Astrograph Catalog},
-address = {New York},
-year = {2004},
-volume = {127},
-pages = {3043}
-}
-
-@article{NLTT,
-author = {Luyten, W. J. },
-title = {New Luyten Catalogue of Stars with Proper Motions Larger than Two Tenths of an Arcsecond},
-year = {1979},
-address={Minneapolis:  University of Minnesota}
-}
-
-@article{Morbidelli2005,
-author = {Morbidelli, A. and H. F. Levison and K. Tsiganis and R. Gomes},
-title = {The chaotic capture of Jovian Trojan asteroids during the early dynamical evolution of the Solar System},
-journal = {Nature},
-year = {2005},
-volume = {435},
-pages = 
-{462-466}
-}
-@book{Kovalevsky1995,
-author = {Kovalevsky, J.},
-publisher = {Springer-Verlag},
-title = {Modern Astrometry},
-year = {1995},
-address = {Berlim, Heidelberg}
-}
-
-@article{Scott2003,
-author = {Scott S. Sheppard and David C. Jewitt},
-title = {An abundant population of small irregular satellites around Jupiter},
-journal = {Nature},
-year = {2003},
-volume = {423},
-pages = {261-263}
-}
-
-@article{Scott2006,
-author = {Scott S. Sheppard},
-title = {Outer Irregular Satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects},
-journal = {Proceedings IAU Symposium},
-year = {2006},
-volume = {229},
-pages = {319-334}
-}
-
-@Article{Nesvorny2003,
-author = {David Nesvorný and Jose L. A. Alvarellos and Luke Dones and Harold F. Levison},
-title = {Orbital and Collisional Evolution of the Irregular Satellites},
-journal = {The Astronomical Journal},
-year = {2003},
-volume = {126},
-pages = {398–429},
-}
-
-@Article{Grav2003,
-author = {Tommy Grav and Matthew J. Holman and Brett J. Gladman and Kaare Asksnes},
-title = {Photometric Survey of the Irregular Satellites},
-journal = {Icarus},
-year = {2003},
-volume = {166},
-pages = {33-45},
-}
-
-@Article{Nesvorny2007,
-author = {David Nesvorný and David Vokrouhlický and Alessandro Morbidelli},
-title = {Capture of Irregular Satellites During Planetary Encounters},
-journal = {The Astronomical Journal},
-year = {2007},
-volume = {133},
-pages = {1962-1976},
-month = {May},
-}
-
-@Article{Clark2005,
-author = {Roger N. Clark and others},
-title = {Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy},
-journal = {Nature},
-year = {2005},
-volume = {435},
-number = {5},
-pages = {66-69},
-}
-
-@Article{Desmars2013,
-author = {J. Desmars and S.N. Li and R. Tajeddine and Q.Y. Peng and Z.H. Tang},
-title = {Phoebe’s orbit from ground-based and space-based observations},
-journal = {Astronomy \& Astrophysics},
-year = {2013},
-}
-
-@Article{Arias1995,
-author = {Arias, E. F. and Charlot, P. and Feissel, M. and Lestrade, J.},
-title = {The extragalactic reference system of the International Earth Rotation Service, ICRS},
-journal = {Astronomy \& Astrophysics},
-year = {1995},
-volume = {303},
-pages = {604-608},
-}
-
-@Article{Martins2004,
-author = {R. Vieira-Martins and C. H. Veiga and P. Bourget and A. H. Andrei and P. Descamps},
-title = {Systematic astrometric observations of Proteus},
-journal = {Astronomy \& Astrophysics},
-year = {2004},
-volume = {425},
-pages = {1107-1111},
-}
-
-@Article{Kirchoff2010,
-author = {Michelle R. Kirchoff and Paul Schenk},
-title = {Impact Cratering Records of the Mid-Sized, Icy Saturnian Satellites},
-journal = {Icarus},
-year = {2010},
-volume = {206},
-pages = {485-497},
+title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
+url={http://dx.doi.org/10.1051/0004-6361/201526273},
+DOI={10.1051/0004-6361/201526273},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and others},
+year={2015},
+month={Jun}
 }
