--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -41,7 +41,7 @@
 \begin{document}
 \doutorado
 
-\titulo{Aplicações Astrométricas e Fotométricas para o Estudo do Sistema Solar Exterior}
+\titulo{Estudo Astrométrico e Fotométrico do Sistema Solar Exterior}
 \autor{Altair Ramos Gomes Júnior}
 \ultimonome{Gomes Júnior}
 \nome{Altair Ramos}
