--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -264,12 +264,13 @@ year = {2015},
 }
 
 @Article{GomesJunior2015-Irregular,
-title={Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations},
+title={\href{http://dx.doi.org/10.1051/0004-6361/201526273}{Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations}},
 url={http://dx.doi.org/10.1051/0004-6361/201526273},
 DOI={10.1051/0004-6361/201526273},
 journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
 author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and others},
 year={2015},
-month={Jun}
+month={Jun},
+note={aceito}
 }
