--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -27,7 +27,7 @@ pages={507–518}
 }
 
 @Article{Smith1989,
-title={Voyager 2 at Neptune: Imaging Science Results},
+title={\href{http://dx.doi.org/10.1126/science.246.4936.1422}{Voyager 2 at Neptune: Imaging Science Results}},
 volume={246},
 url={http://dx.doi.org/10.1126/science.246.4936.1422},
 DOI={10.1126/science.246.4936.1422},
@@ -51,7 +51,7 @@ pages = {1158}
 }
 
 @Article{Rettig2001,
-title={Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey},
+title={\href{http://dx.doi.org/10.1006/icar.2001.6715}{Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey}},
 volume={154},
 url={http://dx.doi.org/10.1006/icar.2001.6715},
 DOI={10.1006/icar.2001.6715},
@@ -79,7 +79,7 @@ pages={459–461}
 }
 
 @article{Porco2003,
-title={Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings},
+title={\href{http://dx.doi.org/10.1126/science.1079462}{Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings}},
 volume={299},
 url={http://dx.doi.org/10.1126/science.1079462},
 DOI={10.1126/science.1079462},
@@ -149,7 +149,7 @@ pages={458–476}
 }
 
 @Article{Thomas2010,
-title={Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission},
+title={\href{http://dx.doi.org/10.1016/j.icarus.2010.01.025}{Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission}},
 volume={208},
 url={http://dx.doi.org/10.1016/j.icarus.2010.01.025},
 DOI={10.1016/j.icarus.2010.01.025},
@@ -248,7 +248,7 @@ pages={28–37}
 }
 
 @Article{Dunham2014,
-author = {Dunham D.W. and others},
+author = {Dunham, D.W. and others},
 year = {2014},
 journal = {\href{http://sbn.psi.edu/pds/resource/occ.html}{Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System}},
 url = {http://sbn.psi.edu/pds/resource/occ.html},
@@ -259,7 +259,7 @@ author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and othe
 title = {\href{http://arxiv.org/abs/1504.04902}{Results of two multi-chord stellar occultations by dwarf planet (1) Ceres}},
 url = {http://arxiv.org/abs/1504.04902},
 journal = {Monthly Notices},
-note = {aceito,},
+note = {aceito},
 year = {2015},
 }
 
